appId: world.respect.app

---
- tapOn:
    id: "nav_classes"
- tapOn: ${CLASSNAME}
- tapOn: "Add Teacher"
- tapOn: "Add person"
- assertVisible:
      id: "app_title"
      text: "Add person"
- tapOn: "First names*"
- inputText: ${FIRSTNAME}
- tapOn: "Last name*"
- inputText: ${LASTNAME}
- tapOn:
        text: "Gender*"
        retryTapIfNoChange: true
- tapOn: "Female"
- tapOn: "Save"
- assertVisible:
      text: ${FIRSTNAME} ${LASTNAME}