appId: world.respect.app

---
- tapOn: "Classes"
- tapOn: "New Class"
# Admin copy invite code to add student
- tapOn: "Add Teacher"
- tapOn: "Add person"
- assertVisible:
    id: "app_title"
    text: "Add person"
- tapOn: "First names*"
- inputText: ${TEACHER_FIRSTNAME}
- tapOn: "Last name*"
- inputText: ${TEACHER_LASTNAME}
- tapOn: "Gender*"
- tapOn: "Female"
- tapOn: "Role*"
- tapOn: "Teacher"
- tapOn: "Save"
- tapOn: ${TEACHER_FIRSTNAME} ${TEACHER_LASTNAME}
- assertVisible:
    id: "app_title"
    text: ${TEACHER_FIRSTNAME} ${TEACHER_LASTNAME}
- tapOn: "Create account"
- tapOn:  "Username"
- inputText: ${TEACHER_USERNAME}
- tapOn: "Password*"
- inputText: ${TEACHER_PASSWORD}
- tapOn: "Save"
- assertVisible:
    id: "app_title"
    text: ${TEACHER_FIRSTNAME} ${TEACHER_LASTNAME}