appId: world.respect.app

---
# subflows/join_via_code.yaml
- clearState: world.respect.app
- launchApp:
    arguments:
      respect_directory: ${SCHOOL_URL}
- tapOn: "Get Started"
- runFlow:
    file: "get_started_select_school_by_name.yaml"
    env:
      SCHOOL_NAME: ${SCHOOL_NAME}
- tapOn: "I have an invite code"
- tapOn: "Invite code"
- inputText: ${INVITE_CODE}
- tapOn: "Next"
- tapOn: "Next" # Accept Invitation screen
- tapOn: "Accept" # Terms screen
- tapOn: "Your name*"
- inputText: ${FULL_NAME}
- tapOn: "Gender*"
- tapOn: "Female"
- tapOn: "Your date of birth*"
- runScript: "scripts/setDate.js"
- inputText: ${output.pastYearDateP}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Create account"
- assertVisible: ${USERNAME}
- tapOn: "Next"
- tapOn: "Password*"
- inputText: "test123"
- tapOn: "Sign-up"
- runFlow:
    when:
      visible: "Save password for Respect?"
    file: "save_password_prompt_cancel.yaml"