appId: world.respect.app
env:
  SCHOOL_URL: ${SCHOOL_URL}
  SCHOOL_NAME: ${SCHOOL_NAME}
  SCHOOL_ADMIN_PASSWORD: ${SCHOOL_ADMIN_PASSWORD}
  TEST_APP_URL: ${TEST_APP_URL}
  TEST_APP_NAME: ${TEST_APP_NAME}
  TEST_APP_MODE: ${TEST_APP_MODE}
  OFFLINE_STATUS: ${OFFLINE_STATUS}

onFlowStart:
  - startRecording: "001_001_app_integratin_test"
  - clearState: world.respect.app

onFlowComplete:
  - stopRecording
  - setAirplaneMode: disabled
---
- launchApp
- tapOn: "Get Started"
- assertVisible: "Let's get started"
- tapOn: "Other options"
- assertVisible: "Other options"
- tapOn: "Paste the link here"
- inputText: ${SCHOOL_URL}
- tapOn: "Next"
- assertVisible: "Login"
- tapOn:
    id: "username"
- inputText: "admin"
- tapOn:
    id : "password"
- inputText: ${SCHOOL_ADMIN_PASSWORD}
- tapOn: "Login"
- assertVisible:
    id: "app_title"
    text: "Home"

- runFlow:
    when:
      notVisible: ${TEST_APP_NAME}
    file: "subflows/AddApp.yaml"
    env:
      TEST_APP_NAME: ${TEST_APP_NAME}
- assertVisible: ${TEST_APP_NAME}
- runFlow:
     file: generated/gotolearningunit.yaml
     env:
       TEST_APP_NAME: ${TEST_APP_NAME}

- runFlow:
    when:
      true: ${OFFLINE_STATUS === 'true'}
    file: "subflows/OfflineTrue.yaml"

- tapOn: "Open"

- runFlow:
    when:
      true: ${TEST_APP_MODE === 'native'}
    commands:
      - assertNotVisible: #This assertion make sure the app is not opened in web-view mode.
                id: "webview_close" 
- runFlow:
    when:
      true: ${TEST_APP_MODE === 'webview'}
    commands:
        - assertVisible:
              id: "webview_close"   #This assertion make sure the app is opened in web-view mode.

- extendedWaitUntil:
    visible:
      id: "publication_title"
    timeout: 1800000

